--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: "Times New Roman",Arial;
+    font-family: "Times New Roman", sans-serif;
     background-color: #000000;
     color: #ffffff;
 }
@@ -16,7 +16,7 @@ h2{
 
 p{
     font-size: 24px;
-    padding-top: 25px;
+    padding-top: 15px;
 }
 
 img{
