--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1{
 }
 h2{
     font-size: 32px;
-    filter: drop-shadow(4px 4px 2px #808080);
+    text-shadow: 4px 4px 2px #808080;
 }
 
 p{
@@ -49,7 +49,7 @@ div{
 }
 #yellow h2{
     color: #000000;
-    filter: drop-shadow(4px 4px 2px #c7e2c7);
+    text-shadow: 4px 4px 2px #c7e2c7;
 }
 #yellow p{
     color: #000000;
@@ -59,7 +59,7 @@ div{
     text-align: left;
 }
 
-footer{
+footer p{
     text-align: center;
     padding-right: 10px;
     padding-bottom: 10px;
