--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,5 @@ div{
 
 footer p{
     text-align: center;
-    padding-right: 10px;
-    padding-bottom: 10px;
+    padding: 0px 10px 10px 0px;
 }
